--- a/src/app/pages/dte/lottery/index/lottery.component.html
+++ b/src/app/pages/dte/lottery/index/lottery.component.html
@@ -41,20 +41,31 @@
           </ng-template>
         </ngx-datatable-column>
 
-        <ngx-datatable-column name="{{'global.label.status' | translate}}" prop="status_publish" [sortable]="false">
+        <ngx-datatable-column name="{{'global.label.status' | translate}}" prop="status" [sortable]="false">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
             <div class="name-container">
               <p id="status" class="status text-truncate h6 p-4 status-order" style="text-transform: uppercase;"
-                [ngClass]="row.status_publish === 'publish' ? 'mat-green-800-bg' : 'mat-red-900-bg'">
-                {{row.status_publish === 'publish' ? ('dte.trade_program.text6' | translate) : ('dte.trade_program.text7' | translate) }}
+                [ngClass]="row.status === 'berjalan' ? 'mat-green-800-bg' : row.status === 'berakhir' ? 'mat-red-800-bg' : row.status === 'belum berjalan' ? 'mat-black-800-bg' :
+                'mat-blue-900-bg'">
+                {{
+                  row.status === 'berjalan' ? 'Berjalan' : 
+                  row.status === 'berakhir' ? 'Berakhir' :
+                  row.status === 'belum berjalan' ? 'Belum Berjalan'
+                  : 'Draft'
+                }}
               </p>
             </div>
           </ng-template>
         </ngx-datatable-column>
 
-        <ngx-datatable-column name="Publish" prop="coin_expiry_date">
+        <ngx-datatable-column name="Publish" prop="status_publish" [sortable]="false">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-            {{row.coin_expiry_date | date:'dd/MM/yyyy'}}
+            <div class="name-container">
+              <p id="status" class="status text-truncate h6 p-4 status-order" style="text-transform: uppercase;"
+                [ngClass]="row.status_publish === 'publish' ? 'mat-blue-800-bg' : 'mat-blue-900-bg'">
+                {{row.status_publish === 'publish' ? ('dte.trade_program.text6' | translate) : ('dte.trade_program.text7' | translate) }}
+              </p>
+            </div>
           </ng-template>
         </ngx-datatable-column>
 
@@ -64,7 +75,7 @@
               <button id="btn-detail" mat-icon-button *ngIf="!permission?.ubah" color="" (click)="directDetail(row)">
                 <mat-icon class="secondary-text">download</mat-icon>
               </button>
-              <button id="btn-edit" mat-icon-button *ngIf="permission?.ubah" color="" (click)="directEdit(row)">
+              <button id="btn-edit" mat-icon-button color="" (click)="directEdit(row)">
                 <mat-icon class="secondary-text">edit</mat-icon>
               </button>
               <button id="btn-delete" mat-icon-button color="primary" matTooltip="{{'global.button.delete' | translate}}"
