--- a/src/app/pages/dte/coin-adjustment-approval/index-tsm/coin-adjustment-approval-tsm.component.html
+++ b/src/app/pages/dte/coin-adjustment-approval/index-tsm/coin-adjustment-approval-tsm.component.html
@@ -177,7 +177,7 @@
 
 <div fxLayout="row wrap" fxLayoutAlign="center center" fxLayout.lt-md="column" class="p-16" fxLayoutGap="20px"
   *ngIf="selected.length">
-  <button mat-raised-button type="button" class="primary-green"
+  <button mat-raised-button type="button" class="mat-green-800-bg"
     style="width: 220px; height: 50px; font-size: 18px;border-radius:5px;" (click)="actionDialog('Setujui')">
     APPROVE
   </button>
