--- a/src/app/pages/dte/lottery/create/lottery-create.component.html
+++ b/src/app/pages/dte/lottery/create/lottery-create.component.html
@@ -79,7 +79,7 @@
                     <!-- <mat-select formControlName="group_trade_program" placeholder="Group Trade Program">
                       <mat-option *ngFor="let item of listGroupTradeProgram" [value]="item.id">{{item.name}}</mat-option>
                     </mat-select> -->
-                    <mat-select formControlName="group_trade_program" placeholder="{{'dte.group_trade_program.text1' | translate}}" #singleSelect>
+                    <mat-select formControlName="group_trade_program" placeholder="{{'dte.group_trade_program.text1' | translate}}" multiple>
                       <ngx-mat-select-search [formControl]="filterGTP" placeholderLabel="{{'global.label.search' | translate}} {{'dte.group_trade_program.text1' | translate}}..."
                         noEntriesFoundLabel="{{'global.messages.data_not_found' | translate}}"></ngx-mat-select-search>
                       <mat-option *ngFor="let item of filteredGTP | async" [value]="item.id">
@@ -88,7 +88,7 @@
                     </mat-select>
                   </mat-form-field>
                   <mat-form-field fxFlex="50" class="is-light form-primary">
-                    <mat-select formControlName="sub_group_trade_program" placeholder="Sub Group Trade Program" #singleSelect>
+                    <mat-select formControlName="sub_group_trade_program" placeholder="Sub Group Trade Program" multiple>
                       <ngx-mat-select-search [formControl]="filterSGTP" placeholderLabel="{{'global.label.search' | translate}} Sub {{'dte.group_trade_program.text1' | translate}}..."
                         noEntriesFoundLabel="{{'global.messages.data_not_found' | translate}}"></ngx-mat-select-search>
                       <mat-option *ngFor="let item of filteredSGTP | async" [value]="item.id">
