--- a/src/app/pages/dte/spin-the-wheel/create/spin-the-wheel-create.component.html
+++ b/src/app/pages/dte/spin-the-wheel/create/spin-the-wheel-create.component.html
@@ -46,37 +46,72 @@
                   </mat-form-field>
                 </div>
                 <div fxLayout="row" class="px-24" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
-                  <mat-form-field fxFlex="50%" class="is-light form-primary">
-                    <input matInput formControlName="start_date" (focus)="startDate.open()" [matDatepicker]="startDate"
-                      placeholder="Tanggal Mulai">
-                    <mat-datepicker-toggle matSuffix [for]="startDate">
-                      <mat-icon matDatepickerToggleIcon>date_range</mat-icon>
-                    </mat-datepicker-toggle>
-                    <mat-datepicker #startDate></mat-datepicker>
-                    <mat-error
-                      *ngIf="formSpin.controls['start_date'].hasError('required') && formSpin.controls['start_date'].touched">
-                      {{ls.locale.manajemen_barang_sku.manajemen_koin.text15}} {{'global.messages.mandatory_text' | translate}}
-                    </mat-error>
-                  </mat-form-field>
-  
-                  <mat-form-field fxFlex="50%" class="is-light form-primary">
-                    <input matInput formControlName="end_date" (focus)="endDate.open()" [matDatepicker]="endDate"
-                      placeholder="Tanggal Berakhir">
-                    <mat-datepicker-toggle matSuffix [for]="endDate">
-                      <mat-icon matDatepickerToggleIcon>date_range</mat-icon>
-                    </mat-datepicker-toggle>
-                    <mat-datepicker #endDate></mat-datepicker>
-                    <mat-error
-                      *ngIf="formSpin.controls['start_date'].hasError('required') && formSpin.controls['start_date'].touched">
-                      {{ls.locale.manajemen_barang_sku.manajemen_koin.text16}} {{'global.messages.mandatory_text' | translate}}
-                    </mat-error>
-                  </mat-form-field>
+
+                  <div fxLayout="row" fxFlex="100">
+                    <mat-form-field fxFlex="50%" class="is-light form-primary">
+                      <input matInput formControlName="start_date" (focus)="startDate.open()" [matDatepicker]="startDate"
+                        placeholder="Tanggal Mulai" [min]="minDate">
+                      <mat-datepicker-toggle matSuffix [for]="startDate">
+                        <mat-icon matDatepickerToggleIcon>date_range</mat-icon>
+                      </mat-datepicker-toggle>
+                      <mat-datepicker #startDate></mat-datepicker>
+                      <mat-error
+                        *ngIf="formSpin.controls['start_date'].hasError('required') && formSpin.controls['start_date'].touched">
+                        {{ls.locale.manajemen_barang_sku.manajemen_koin.text15}} {{'global.messages.mandatory_text' | translate}}
+                      </mat-error>
+                    </mat-form-field>
+                    <div fxFlex="10"></div>
+                    <mat-form-field fxFlex="30" class="is-light form-primary" id="start_time">
+                      <input matInput formControlName="start_time"
+                        placeholder="{{'notification.popup_notifikasi.text8' | translate}}" [ngxTimepicker]="fullTime1"
+                        [format]="24" readonly>
+                      <mat-icon matSuffix>access_time</mat-icon>
+                      <ngx-material-timepicker #fullTime1></ngx-material-timepicker>
+                      <mat-error
+                        *ngIf="formSpin.controls['start_time'].hasError('required') && formSpin.controls['start_time'].touched">
+                        {{ls.locale.manajemen_barang_sku.manajemen_koin.text15}} {{'global.messages.mandatory_text' | translate}}
+                      </mat-error>
+                    </mat-form-field>
+                  </div>
+
+                  <div fxLayout="row" fxFlex="100">
+                    <mat-form-field fxFlex="50%" class="is-light form-primary">
+                      <input matInput formControlName="end_date" (focus)="endDate.open()" [matDatepicker]="endDate"
+                        placeholder="Tanggal Berakhir" [min]="minDate">
+                      <mat-datepicker-toggle matSuffix [for]="endDate">
+                        <mat-icon matDatepickerToggleIcon>date_range</mat-icon>
+                      </mat-datepicker-toggle>
+                      <mat-datepicker #endDate></mat-datepicker>
+                      <mat-error
+                        *ngIf="formSpin.controls['start_date'].hasError('required') && formSpin.controls['start_date'].touched">
+                        {{ls.locale.manajemen_barang_sku.manajemen_koin.text16}} {{'global.messages.mandatory_text' | translate}}
+                      </mat-error>
+                    </mat-form-field>
+                    <div fxFlex="10"></div>
+                    <mat-form-field fxFlex="30" class="is-light form-primary" id="end_time">
+                      <input matInput formControlName="end_time"
+                        placeholder="{{'notification.popup_notifikasi.text10' | translate}}" [ngxTimepicker]="fullTime2"
+                        [format]="24" readonly>
+                      <mat-icon matSuffix>access_time</mat-icon>
+                      <ngx-material-timepicker #fullTime2></ngx-material-timepicker>
+                      <mat-error
+                        *ngIf="formSpin.controls['end_time'].hasError('required') && formSpin.controls['end_time'].touched">
+                        {{ls.locale.manajemen_barang_sku.manajemen_koin.text15}} {{'global.messages.mandatory_text' | translate}}
+                      </mat-error>
+                    </mat-form-field>
+                  </div>
+                  
+                </div>
+                <div class="confirm pt-24 pb-24 px-24" fxLayout="row">
+                  <button id="btn-simpan" mat-raised-button type="button" class="confirmation-button" fxFlex="20" (click)="submit()">
+                    {{ls.locale.global.button.save}}
+                  </button>
                 </div>
               </div>
             </form>
           </div>
         </mat-tab>
-        <mat-tab label="Audience" disabled="true">
+        <mat-tab label="Audience" [disabled]="true">
           <!-- <div class="ayo-middle py-24" fxLayout="row" fxFlex="100">
               <form autocomplete="off" fxLayout="row" fxLayoutGap="16px" fxFlex="45" [formGroup]="formGeo">
                 <div fxFlex="100">
@@ -287,7 +322,7 @@
             </button>
           </div> -->
         </mat-tab>
-        <mat-tab label="Pengaturan Mekanisme"  disabled="true">
+        <mat-tab label="Pengaturan Mekanisme" [disabled]="true">
           <!-- <div fxLayout="row" class="px-24">
             <mat-form-field fxFlex class="is-light form-primary" fxFlex="49">
               <input matInput type="text" placeholder="Frekuensi Belanja B2B Mingguan Yang Dibutuhkan" formControlName="name"
@@ -547,7 +582,7 @@
             </div>
           </div> -->
         </mat-tab>
-        <mat-tab label="Preview"  disabled="true">
+        <mat-tab label="Preview" [disabled]="true">
           <div fxLayout="row" fxFlex="100">
             <div fxFlex="30">
               <div class="grey-box">
